--- a/SatHachBangLaiXe/FrmXemDapAn.resx
+++ b/SatHachBangLaiXe/FrmXemDapAn.resx
@@ -141,6 +141,9 @@
   <metadata name="sATHACHBANGLAI1DataSet4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>416, 56</value>
   </metadata>
+  <metadata name="sATHACHBANGLAI1DataSet4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>416, 56</value>
+  </metadata>
   <metadata name="xem_Dap_An_SaiTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 95</value>
   </metadata>
